; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_bootloader_init.c_update_flash_config.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_bootloader_init.c_update_flash_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@g_rom_flashchip = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @update_flash_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_flash_config(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %12 [
    i32 131, label %7
    i32 130, label %8
    i32 129, label %9
    i32 128, label %10
    i32 132, label %11
  ]

7:                                                ; preds = %1
  store i32 1, i32* %3, align 4
  br label %13

8:                                                ; preds = %1
  store i32 2, i32* %3, align 4
  br label %13

9:                                                ; preds = %1
  store i32 4, i32* %3, align 4
  br label %13

10:                                               ; preds = %1
  store i32 8, i32* %3, align 4
  br label %13

11:                                               ; preds = %1
  store i32 16, i32* %3, align 4
  br label %13

12:                                               ; preds = %1
  store i32 2, i32* %3, align 4
  br label %13

13:                                               ; preds = %12, %11, %10, %9, %8, %7
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @g_rom_flashchip, i32 0, i32 0), align 4
  %15 = load i32, i32* %3, align 4
  %16 = mul nsw i32 %15, 1048576
  %17 = call i32 @esp_rom_spiflash_config_param(i32 %14, i32 %16, i32 65536, i32 4096, i32 256, i32 65535)
  ret void
}

declare dso_local i32 @esp_rom_spiflash_config_param(i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
